fix header width to prevent overflow on larger display sizes

--- a/css/index.css
+++ b/css/index.css
@@ -10,13 +10,15 @@
 }
 html,
 body {
-  width: 80%;
-  margin: 0 auto;
   font-family: system-ui, sans-serif;
   color: var(--darkgray);
   background-color: var(--bgcolor);
   font-family: 'EB Garamond', Garamond, serif;
   padding-bottom: 6rem;
+}
+.container {
+  width: 60%;
+  margin: 0 auto;
 }
 h1, h2, h3 {
   font-size: 48px;
@@ -70,7 +72,8 @@ header {
   /*border-bottom: 1px dashed var(--lightgray);*/
   position: fixed;
   min-height:40px;
-  width: 60%; 
+  width: 100%; 
+  margin: 0 auto;
   background-color: var(--bgcolor);
   z-index:10;
   text-align: center;
@@ -283,6 +286,8 @@ a[href].direct-link:focus:visited,
 
 footer {
   padding-top: 4rem;
+  margin: 0 auto;
+  width: 60%;
 }
 
 
@@ -338,13 +343,13 @@ footer {
     .tmpl-post {
       width:unset;
     }
-    body {
-      width: 100%;
+    .container, footer {
+      width: 90%;
     }
     header {
       text-align: left;
       display: block;
-      width:100%;
+      width:90%;
       position: unset;
     }
     .nav, .nav-item {
